--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -3,7 +3,7 @@
 }
 
 p {
-  color: #8a6a96;
+  color: #f2dafc;
 }
 
 .name {
